[package]
name = "umlink"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.51", features = ["derive"] }
derive_more = { version = "2.0.1", features = ["from", "error"] }
jclassfile = "0.3.0"
thiserror = "2.0.17"

[dependencies.mermaid-parser]
git = "https://github.com/Last-butnotleast/mermaid-parser.git"
rev = "04ae89c"

