[package]
name = "umlink"
version = "0.3.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.51", features = ["derive"] }
derive_more = { version = "2.0.1", features = ["from", "error"] }
thiserror = "2.0.17"

serde = { version = "1.0.228", features = ["derive"] }
serde_yml = "0.0.12"

[dependencies.jclassfile]
git = "https://github.com/GenericConfluent/jclassfile.git"
rev = "b6b38a3"

[dependencies.mermaid-parser]
git = "https://github.com/GenericConfluent/mermaid-parser.git"

